...

	// MARK: - Properties

	private let recentData = StackContainer.shared.coreDataStack
	private let frc: NSFetchedResultsController<Recent> = {
		let request = NSFetchRequest<Recent>(entityName: "Recent")
		request.sortDescriptors = [.init(key: "search", ascending: true)]
		return NSFetchedResultsController(fetchRequest: request,
										  managedObjectContext: StackContainer.shared.coreDataStack.viewContext,
										  sectionNameKeyPath: nil,
										  cacheName: nil)
	}()
	private let interactor: PhotosCollectionBusinessLogic
...
	}

	// MARK: Setup UI

	private func setUpNavigationBar() {
		navigationController?.navigationBar.barTintColor = .black
		navigationItem.title = "Search Images"
		navigationController?.navigationBar.titleTextAttributes = [NSAttributedString.Key.foregroundColor: UIColor.white]
		navigationItem.hidesSearchBarWhenScrolling = true
	}

	private func setUpSearchBar() {
		let searchController = UISearchController(searchResultsController: nil)
...
